--- a/helper/build.gradle
+++ b/helper/build.gradle
@@ -32,10 +32,22 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // Facebook
+    implementation "com.facebook.android:facebook-android-sdk:16.1.3"
+    // AppsFlyer
+    implementation "com.appsflyer:af-android-sdk:6.12.1"
+    //ref
+    implementation "com.android.installreferrer:installreferrer:2.2"
+    //JSoup
+    implementation 'org.jsoup:jsoup:1.16.1'
 }
